syntax = "proto3";
option go_package = "admin_pb";
package izumin5210.sandbox.grapi_playground.admin;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "type/book.proto";

service BookService {
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse) {
    option (google.api.http) = {
      get: "/books"
    };
  }
  rpc GetBook (GetBookRequest) returns (type.Book) {
    option (google.api.http) = {
      get: "/books/{book_id}"
    };
  }
  rpc CreateBook (CreateBookRequest) returns (type.Book) {
    option (google.api.http) = {
      post: "/books"
      body: "book"
    };
  }
  rpc UpdateBook (UpdateBookRequest) returns (type.Book) {
    option (google.api.http) = {
      patch: "/books/{book.book_id}"
      body: "book"
    };
  }
  rpc DeleteBook (DeleteBookRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/books/{book_id}"
    };
  }
}

message ListBooksRequest {
}

message ListBooksResponse {
  repeated type.Book books = 1;
}

message GetBookRequest {
  string book_id = 1;
}

message CreateBookRequest {
  type.Book book = 1;
}

message UpdateBookRequest {
  type.Book book = 1;
}

message DeleteBookRequest {
  string book_id = 1;
}
